--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend_react",
   "version": "0.1.0",
+  "homepage": "http://riz-mulya.github.io",
   "private": true,
   "dependencies": {
     "@sanity/client": "^5.4.2",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
